Source/CppCore/bindings/csharp/EnKFWrapper.h

// ==============================================================================
// 类型定义和结构体
// ==============================================================================

/**
 * @brief 海洋状态向量结构
 */
typedef struct {
    double temperature;           // 温度 (°C)
    double salinity;             // 盐度 (PSU)
    double velocity_u;           // U方向流速 (m/s)
    double velocity_v;           // V方向流速 (m/s)
    double velocity_w;           // W方向流速 (m/s)
    double sea_ice_concentration; // 海冰浓度 (0-1)
    double sea_ice_thickness;    // 海冰厚度 (m)
    double sea_surface_height;   // 海表面高度 (m)
} OceanState;
/**
 * @brief EnKF配置参数
 */
typedef struct {
    int ensemble_size;              // 集合大小（默认100）
    double localization_radius;     // 局地化半径 (m)
    double inflation_factor;        // 充气因子
    double regularization_threshold; // 正则化阈值
    bool use_localization;          // 启用局地化
    bool use_inflation;             // 启用充气
    int num_threads;                // 线程数
    bool enable_vectorization;      // 启用向量化
} EnKFConfig;
/**
 * @brief 观测数据结构
 */
typedef struct {
    double* values;                 // 观测值数组
    double* error_variances;        // 观测误差方差数组
    double* locations_x;            // 观测位置X坐标
    double* locations_y;            // 观测位置Y坐标
    int* observation_types;         // 观测类型数组
    bool* quality_flags;            // 质量控制标记
    int num_observations;           // 观测数量
    int64_t timestamp;              // 观测时间戳
} ObservationData;
/**
 * @brief 预报结果结构
 */
typedef struct {
    OceanState* ensemble_mean;      // 集合均值
    double* forecast_covariance;    // 预报协方差（展平的矩阵）
    double ensemble_spread;         // 集合离散度
    int64_t computation_time_ms;    // 计算时间（毫秒）
    bool success;                   // 成功标志
    int state_size;                 // 状态大小
} ForecastResult;
/**
 * @brief 分析结果结构
 */
typedef struct {
    OceanState* analysis_mean;      // 分析均值
    double* analysis_covariance;    // 分析协方差（展平的矩阵）
    double* kalman_gain;            // 卡尔曼增益矩阵（展平）
    double innovation_variance;     // 创新方差
    double observation_impact;      // 观测影响
    int64_t computation_time_ms;    // 计算时间（毫秒）
    bool success;                   // 成功标志
    int state_size;                 // 状态大小
    int obs_size;                   // 观测大小
} AnalysisResult;
/**
 * @brief 性能指标结构
 */
typedef struct {
    double ensemble_spread;         // 集合离散度
    double filter_divergence;       // 滤波器发散度
    double observation_impact;      // 观测影响
    uint64_t total_cycles;          // 总循环次数
    int64_t average_cycle_time_ms;  // 平均循环时间
    double memory_usage_mb;         // 内存使用量（MB）
    double analysis_accuracy;       // 分析精度
} PerformanceMetrics;
/**
 * @brief 网格参数结构
 */
typedef struct {
    int nx, ny, nz;                 // 网格维度
    double dx, dy, dz;              // 网格间距
    double x_min, y_min, z_min;     // 网格起始坐标
    double x_max, y_max, z_max;     // 网格结束坐标
} GridParameters;
// 句柄类型定义
typedef void* EnKFHandle;
// 观测类型枚举
typedef enum {
    OBS_SEA_LEVEL_ANOMALY = 0,      // 海平面高度异常
    OBS_SEA_SURFACE_TEMPERATURE,    // 海表温度
    OBS_SEA_ICE_CONCENTRATION,      // 海冰浓度
    OBS_ARGO_TEMPERATURE,           // Argo温度剖面
    OBS_ARGO_SALINITY,              // Argo盐度剖面
    OBS_SEA_ICE_DRIFT,              // 海冰漂移
    OBS_ALTIMETRY                   // 高度计数据
} ObservationType;
// 充气类型枚举
typedef enum {
    INFLATION_MULTIPLICATIVE = 0,    // 乘性充气
    INFLATION_ADDITIVE,             // 加性充气
    INFLATION_ADAPTIVE,             // 自适应充气
    INFLATION_RELAXATION            // 松弛充气
} InflationType;
// ==============================================================================
// EnKF系统管理接口
// ==============================================================================

/**
 * @brief 创建EnKF系统实例
 * @param config EnKF配置参数
 * @param grid_params 网格参数
 * @return EnKF系统句柄
 */
OCEANSIM_API EnKFHandle EnKF_Create(const EnKFConfig* config, const GridParameters* grid_params);
/**
 * @brief 销毁EnKF系统实例
 * @param handle EnKF系统句柄
 */
OCEANSIM_API void EnKF_Destroy(EnKFHandle handle);
/**
 * @brief 初始化EnKF系统
 * @param handle EnKF系统句柄
 * @param initial_state 初始状态数组
 * @param background_covariance 背景误差协方差矩阵（展平）
 * @param state_size 状态大小
 * @return 成功返回true，失败返回false
 */
OCEANSIM_API bool EnKF_Initialize(EnKFHandle handle,
                                  const OceanState* initial_state,
                                  const double* background_covariance,
                                  int state_size);
/**
 * @brief 获取EnKF系统信息
 * @param handle EnKF系统句柄
 * @param info_buffer 信息缓冲区
 * @param buffer_size 缓冲区大小
 * @return 成功返回0，失败返回错误代码
 */
OCEANSIM_API int EnKF_GetSystemInfo(EnKFHandle handle, char* info_buffer, int buffer_size);
// ==============================================================================
// EnKF核心算法接口
// ==============================================================================

/**
 * @brief 执行预报步骤
 * @param handle EnKF系统句柄
 * @param time_step 时间步长（秒）
 * @param result 预报结果（输出）
 * @return 成功返回0，失败返回错误代码
 */
OCEANSIM_API int EnKF_ExecuteForecast(EnKFHandle handle,
                                      double time_step,
                                      ForecastResult* result);
/**
 * @brief 执行分析步骤
 * @param handle EnKF系统句柄
 * @param observations 观测数据
 * @param result 分析结果（输出）
 * @return 成功返回0，失败返回错误代码
 */
OCEANSIM_API int EnKF_ExecuteAnalysis(EnKFHandle handle,
                                      const ObservationData* observations,
                                      AnalysisResult* result);
/**
 * @brief 执行完整的同化循环
 * @param handle EnKF系统句柄
 * @param time_step 时间步长（秒）
 * @param observations 观测数据
 * @param forecast_result 预报结果（输出）
 * @param analysis_result 分析结果（输出）
 * @return 成功返回0，失败返回错误代码
 */
OCEANSIM_API int EnKF_ExecuteAssimilationCycle(EnKFHandle handle,
                                               double time_step,
                                               const ObservationData* observations,
                                               ForecastResult* forecast_result,
                                               AnalysisResult* analysis_result);
// ==============================================================================
// 状态访问接口
// ==============================================================================

/**
 * @brief 获取当前集合均值
 * @param handle EnKF系统句柄
 * @param mean_state 均值状态数组（输出）
 * @param state_size 状态大小
 * @return 成功返回0，失败返回错误代码
 */
OCEANSIM_API int EnKF_GetCurrentMean(EnKFHandle handle,
                                     OceanState* mean_state,
                                     int state_size);